# drug-target-Predictor

./: .gitignore  Dockerfile  LICENSE  README.md  download_davis.py  pyproject.toml  requirements.txt
app/: app_deploy.py  streamlit_app.py
configs/: default.yaml
models/checkpoints/: best_model.pt
notebooks/: .gitkeep  demo.ipynb
src/: __init__.py  data_loader.py  evaluate.py  featurization.py  model.py  predict.py  train.py
tests/: test_app.py  test_data.py  test_model.py
