[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "drug-target-predictor"
version = "1.0.0"
description = "GNN-based drug-target binding affinity predictor trained on the Davis Kinase dataset"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Haseeb Ur Rehman"}
]
dependencies = [
    "torch>=2.1.0",
    "torch-geometric>=2.4.0",
    "rdkit-pypi>=2023.9.0",
    "numpy>=1.24.0,<2.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "plotly>=5.15.0",
    "streamlit>=1.28.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.9.0",
    "flake8>=6.1.0",
]

[project.urls]
Repository = "https://github.com/marine9056/drug-target-predictor"

[tool.setuptools.packages.find]
include = ["src*", "app*"]
